# Compi-Proy

./: CAMBIOS_FASE0.md  CMakeLists.txt  Dockerfile  PUNTEROS_Y_SETHI_ULLMAN.md  a.out  ast.cpp  ast.h  benchmark_mi_compilador.py  compilador  environment.h  gramatica.md  json_output.cpp  json_output.h  main.cpp  parser.cpp  parser.h  run_all_inputs.py  scanner.cpp  scanner.h  semantic_types.h  token.cpp  token.h  visitor.cpp  visitor.h
app/: README_APP.md  server.py
app/static/: index.html
inputs/: input1.s  input1.txt  input10.s  input10.txt  input11.s  input11.txt  input12.s  input12.txt  input2.s  input2.txt  input3.s  input3.txt  input4.s  input4.txt  input5.s  input5.txt  input6.s  input6.txt  input7.s  input7.txt  input8.s  input8.txt  input9.s  input9.txt
outputs/: input_1.s  input_10.s  input_11.s  input_12.s  input_2.s  input_3.s  input_4.s  input_5.s  input_6.s  input_7.s  input_8.s  input_9.s  prog_1  prog_10  prog_11  prog_12  prog_2  prog_3  prog_4  prog_5  prog_6  prog_7  prog_8  prog_9
